--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,6 +2,7 @@
     border: 1px solid red;
     max-width: 142px;
     height: 33px;
-    background-image: url();
+    background-image: url(../../../images/logo.png);
     background-size: contain;
+    background-repeat: no-repeat;
 }
