--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,6 +6,7 @@
     height: 74px;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 45px;
     position: relative;
     display: flex;
     flex-direction: column;
