--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,6 @@
 .page {
-    max-width: 1200px;
+    max-width: 1280px;
+    min-width: 320px;
     height: 1217px;
     background-color: #000;
     font-family: 'Inter', 'Arial', sans-serif;
