версия для разрешений 1280

--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,7 +2,6 @@
     border: 1px solid red;
     width: 120px;
     height: 120px;
-    background-image: url(../../../images/logo-profile.jpg);
-    background-size: cover;
+    object-fit: cover;
     border-radius: 50%;
 }
