--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,7 +1,7 @@
 @import url(./__avatar/profile__avatar.css);
 @import url(./__info/profile__info.css);
-@import url(./__button/profile__button.css);
-@import url(./__edit-button/profile__edit-button.css);
+@import url(./__title/profile__title.css);
+@import url(./__subtitle/profile__subtitle.css);
 
 .profile {
     border: 1px solid red;
@@ -11,4 +11,5 @@
     margin-left: auto;
     margin-right: auto;
     display: flex;
+    flex-direction: row;
 }
