--- a/pages/index.css
+++ b/pages/index.css
@@ -2,4 +2,8 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/edit-button/edit-button.css);
+@import url(../blocks/add-button/add-button.css);
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/footer/footer.css);
 @import url(../fonts/inter.css);
