--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,13 +1,20 @@
 @import url(../element/element.css);
 
 .elements {
-    border: 1px solid red;
     max-width: 882px;
-    height: 744px;
     margin-top: 51px;
     margin-left: auto;
     margin-right: auto;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, 282px);
     grid-gap: 18px;
+    justify-content: center;
+}
+
+@media screen and (max-width: 650px) {
+    .elements {
+        margin-top: 36px;
+        max-width: 282px;
+        grid-gap: 20px;
+    }
 }
