--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,11 +1,17 @@
 @import url(./__copyright/footer__copyright.css);
 
 .footer {
-    border: 1px solid red;
     margin-top: 66px;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 60px;
-    max-width: 882px;
-    
+    max-width: 882px; 
+}
+
+@media screen and (max-width: 650px) {
+    .footer {
+        margin-top: 48px;
+        padding-bottom: 36px;
+        max-width: 282px;
+    }
 }
