--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -12,3 +12,9 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 650px) {
+    .header {
+        padding-top: 28px;
+    }
+}
