--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,5 +1,4 @@
 .profile__title {
-    border: 1px solid red;
     margin: 0;
     color: #fff;
     width: 295px;
@@ -7,4 +6,13 @@
     font-size: 42px;
     line-height: 56px;
     text-rendering: optimizeLegibility;
+}
+
+@media screen and (max-width: 650px) {
+    .profile__title {
+        font-size: 27px;
+        margin-left: 29px;
+        width: 201px;
+        text-align: center;
+    }
 }
