--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,12 +4,19 @@
 @import url(./__subtitle/profile__subtitle.css);
 
 .profile {
-    border: 1px solid red;
     max-width: 882px;
-    height: 120px;
     margin-top: 40px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     flex-direction: row;
+}
+
+@media screen and (max-width: 650px) {
+    .profile {
+        max-width: 282px;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 42px;
+    }
 }
