--- a/blocks/add-button/__rectangle/add-button__rectangle.css
+++ b/blocks/add-button/__rectangle/add-button__rectangle.css
@@ -1,9 +1,16 @@
 .add-button__rectangle {
     top: 0;
     left: 0;
-    width: 100%;
+    width: 150px;
+    height: 50px;
     position: absolute;
     border: 2px solid #fff;
     box-sizing: border-box;
     border-radius: 2px;
+}
+
+@media screen and (max-width: 660px) {
+    .add-button__rectangle {
+        width: 282px;
+    }
 }
