--- a/blocks/edit-button/__rectangle/edit-button__rectangle.css
+++ b/blocks/edit-button/__rectangle/edit-button__rectangle.css
@@ -1,7 +1,8 @@
 .edit-button__rectangle {
     top: 0;
     left: 0;
-    width: 100%;
+    width: 24px;
+    height: 24px;
     position: absolute;
     border: 1px solid #fff;
     box-sizing: border-box;
