--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -6,9 +6,12 @@
     font-size: 42px;
     line-height: 56px;
     text-rendering: optimizeLegibility;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 660px) {
     .profile__title {
         font-size: 27px;
         margin-left: 29px;
