--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,7 @@
 @import url(../vendor/normalize.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__active/popup__active.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/edit-button/edit-button.css);
