--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,11 +1,13 @@
 @import url(./__image/element__image.css);
 @import url(./__text/element__text.css);
 @import url(./__title/element__title.css);
+@import url(./__like/element__like.css);
 @import url(./__vector/element__vector.css);
-@import url(./__rectangle/element__rectangle.css);
 
 .element {
     max-width: 282px;
     height: 361px;
     position: relative;
+    background-color: #fff;
+    border-radius: 10px;
 }
