--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -11,6 +11,12 @@
     justify-content: center;
     border: none;
     transition: all 1s ease-in-out;
+    background-color: #000;
+    border-radius: 2px;
+    color: #fff;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
 }
 
 .popup__button:hover {
@@ -19,6 +25,6 @@
 
 @media screen and (max-width: 550px) {
     .popup__button {
-        width: 228px;
+        width: 198px;
     }
 }
