--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,6 @@
 .page {
-    min-width: 320px;
+    min-width: 300px;
+    min-height: 1217px;
     background-color: #000;
     font-family: 'Inter', 'Arial', sans-serif;
 }
