--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,4 +1,5 @@
 .element__title {
+    max-width: 230px;
     margin: 0;
     font-weight: 900;
     font-size: 24px;
@@ -7,4 +8,7 @@
     text-rendering: optimizeLegibility;
     position: relative;
     z-index: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
