--- a/blocks/popup/__active/popup__active.css
+++ b/blocks/popup/__active/popup__active.css
@@ -1,3 +1,6 @@
 .popup__active {
     display: flex;
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 3s, opacity 0.6s linear;
 }
