--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,6 +5,7 @@
 @import url(./__inputs/popup__inputs.css);
 @import url(./__input/popup__input.css);
 @import url(./__button/popup__button.css);
+@import url(./__card/popup__card.css);
 
 .popup {
     top: 0;
@@ -16,5 +17,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 0, 0, .5);
-    display: none;
+    
+    visibility: hidden;
+    opacity: 0;
 }
