--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,7 +1,9 @@
+@import url(./__delete/element__delete.css);
 @import url(./__image/element__image.css);
 @import url(./__text/element__text.css);
 @import url(./__title/element__title.css);
 @import url(./__like/element__like.css);
+@import url(./__like/_active/element__like_active.css);
 
 .element {
     max-width: 282px;
