--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,7 @@
 @import url(./__container/popup__container.css);
+@import url(./__container/_card/popup__container_card.css);
 @import url(./__close-button/popup__close-button.css);
+@import url(./__close-button/_card/popup__close-button_card.css);
 @import url(./__image/popup__image.css);
 @import url(./__title/popup__title.css);
 @import url(./__inputs/popup__inputs.css);
@@ -12,12 +14,13 @@
     left: 0;
     width: 100%;
     height: 100%;
+    display: flex;
     position: fixed;
     z-index: 2;
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 0, 0, .5);
-    
     visibility: hidden;
     opacity: 0;
+    transition: visibility 3s, opacity 0.6s linear;
 }
