--- a/blocks/popup/__card-image/popup__card-image.css
+++ b/blocks/popup/__card-image/popup__card-image.css
@@ -1,18 +1,18 @@
-.popup-photo__image {
+.popup__card-image {
     max-width: 75vw;
     max-height: 75vh;
     object-fit: cover;
 }
 
 @media screen and (max-width: 850px) {
-    .popup-photo__image {
+    .popup__card-image {
         width: 433px;
         height: 540px;
     }
 }
 
 @media screen and (max-width: 650px) {
-    .popup-photo__image {
+    .popup__card-image {
         width: 240px;
         height: 299px;
     }
