--- a/blocks/popup/__card-name/popup__card-name.css
+++ b/blocks/popup/__card-name/popup__card-name.css
@@ -1,4 +1,4 @@
-.popup-photo__name {
+.popup__card-name {
     max-width: 291px;
     font-family: 'Inter', 'Arial', sans-serif;
     font-weight: 400;
