--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -10,7 +10,7 @@
     color: #000;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
     padding-bottom: 13px;
-    margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 .popup__input:last-child {
