--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,6 +5,8 @@
 @import url(./__title/popup__title.css);
 @import url(./__inputs/popup__inputs.css);
 @import url(./__input/popup__input.css);
+@import url(./__error/popup__error-message.css);
+@import url(./__error/_active/popup__error-message_active.css);
 @import url(./__button/popup__button.css);
 @import url(./__card/popup__card.css);
 @import url(./__card-image/popup__card-image.css);
