--- a/blocks/popup/__button/_disabled/popup__button_disabled.css
+++ b/blocks/popup/__button/_disabled/popup__button_disabled.css
@@ -2,5 +2,6 @@
     background-color: #e5e5e5;
     border: 1px solid #000;
     box-sizing: border-box;
-    border-radius: 4px;
+    border-radius: 2px;
+    pointer-events: none;
 }
