--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -6,7 +6,7 @@
 @import url(./__like/_active/element__like_active.css);
 
 .element {
-    max-width: 282px;
+    width: 282px;
     height: 361px;
     position: relative;
     background-color: #fff;
