--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -7,6 +7,7 @@
     margin-right: 7px;
     background-image: url(../../../images/Group.png);
     background-repeat: no-repeat;
+    cursor: pointer;
 }
 
 .element__like:hover {
