--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -11,6 +11,7 @@
     background-image: url(../../../images/Close-Icon.png);
     background-repeat: no-repeat;
     background-position: center;
+    cursor: pointer;
 }
 
 .popup__close-button:hover {
