--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -12,6 +12,7 @@
     background-image: url(../../../images/Vector.png);
     background-repeat: no-repeat;
     background-position: center;
+    cursor: pointer;
 }
 
 .profile__add-button:hover {
