--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -12,6 +12,7 @@
     background-image: url(../../../images/Edit-Button.png);
     background-repeat: no-repeat;
     background-position: center;
+    cursor: pointer;
 }
 
 .profile__edit-button:hover {
