--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -4,4 +4,9 @@
     z-index: 1;
     position: relative;
     object-fit: cover;
+    cursor: pointer;
+}
+
+.element__image:hover {
+    opacity: 0.8;
 }
