--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,6 +1,6 @@
 .element__image {
-    width: 100%;
-    height: 282px;
+    width: 282px;
+    min-height: 282px;
     z-index: 1;
     position: relative;
     object-fit: cover;
