--- a/src/blocks/element/element.css
+++ b/src/blocks/element/element.css
@@ -2,8 +2,10 @@
 @import url(./__image/element__image.css);
 @import url(./__text/element__text.css);
 @import url(./__title/element__title.css);
+@import url(./__interactivity/element__interactivity.css);
 @import url(./__like/element__like.css);
 @import url(./__like/_active/element__like_active.css);
+@import url(./__like-counter/element__like-counter.css);
 
 .element {
     width: 282px;
