--- a/main.css
+++ b/main.css
@@ -10,28 +10,33 @@
 .popup__error-message{max-width:164px;font-family:Inter,Arial,sans-serif;font-weight:400;font-size:12px;line-height:15px;color:red;z-index:5;margin-top:5px;opacity:0;visibility:hidden}
 .popup__error-message_active{opacity:1;visibility:visible}
 .popup__button{width:358px;height:50px;position:relative;z-index:4;margin:47px auto 36px;display:flex;justify-content:center;align-items:center;border:none;transition:all 1s ease-in-out;background-color:#000;border-radius:2px;color:#fff;font-size:18px;line-height:22px;font-weight:400;cursor:pointer}.popup__button:hover{opacity:.8}@media screen and (max-width:550px){.popup__button{width:198px}}
+.popup__button_delete{margin-top:38px;margin-bottom:36px}
 .popup__card{position:relative;z-index:3}
 .popup__card-image{max-width:75vw;max-height:75vh;-o-object-fit:cover;object-fit:cover}@media screen and (max-width:850px){.popup__card-image{width:433px;height:540px}}@media screen and (max-width:650px){.popup__card-image{width:240px;height:299px}}
 .popup__card-name{max-width:291px;font-family:Inter,Arial,sans-serif;font-weight:400;font-size:12px;line-height:15px;color:#fff;position:absolute;left:0;bottom:-25px;z-index:3;margin:0;text-rendering:optimizeLegibility}
 .popup{top:0;left:0;width:100%;height:100%;display:flex;position:fixed;z-index:2;justify-content:center;align-items:center;background-color:rgba(0,0,0,.5);visibility:hidden;opacity:0;transition:visibility 1s,opacity .6s linear}
 .popup_active{visibility:visible;opacity:1;transition:visibility 1s,opacity .6s linear}
 .popup__input_type_error{max-width:358px;border-bottom:1px solid red}
-.popup__button_disabled{background-color:#e5e5e5;border:1px solid #000;box-sizing:border-box;border-radius:2px}
+.popup__button_disabled{background-color:#e5e5e5;border:1px solid #000;box-sizing:border-box;border-radius:2px;pointer-events:none}
 .header__logo{max-width:142px;height:33px;background-image:url(./images/logo.png);background-size:contain;background-repeat:no-repeat}@media screen and (max-width:910px){.header__logo{margin-left:27px}}
 .header{max-width:882px;height:74px;margin-left:auto;margin-right:auto;padding-top:45px;position:relative;border-bottom:1px solid rgba(84,84,84,.7)}@media screen and (max-width:660px){.header{padding-top:28px}}
-.profile__avatar{width:120px;height:120px;-o-object-fit:cover;object-fit:cover;border-radius:50%}
+.profile__image{z-index:1;position:relative}
+.profile__avatar{width:120px;height:120px;-o-object-fit:cover;object-fit:cover;border-radius:50%;position:relative}
+.profile__avatar-edit{position:absolute;top:0;left:0;width:100%;height:100%;background-image:url(./images/Vector-avatar.png);background-repeat:no-repeat;background-position:50%;opacity:0;border:none;cursor:pointer}.profile__avatar-edit:hover{opacity:1;background-color:rgba(0,0,0,.8)}.profile__avatar-edit:focus{outline:none}
 .profile__info{max-width:336px;margin-left:30px;display:grid;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;grid-gap:16px}@media screen and (max-width:920px){.profile__info{max-width:280px;margin-left:0;grid-column-gap:1px;grid-row-gap:14px;grid-template-rows:1fr}}
 .profile__title{margin:0;color:#fff;width:295px;font-weight:500;font-size:42px;line-height:56px;text-rendering:optimizeLegibility;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:920px){.profile__title{font-size:27px;margin-left:29px;width:201px;text-align:center}}
 .profile__edit-button{width:24px;height:24px;background:none;grid-column:2/3;grid-row:1/2;margin-top:19px;position:relative;transition:all 1s ease-in-out;border:1px solid #fff;box-sizing:border-box;background-image:url(./images/Edit-Button.png);background-repeat:no-repeat;background-position:50%;cursor:pointer}.profile__edit-button:hover{opacity:.6}.profile__edit-button:focus{outline:none}
 .profile__subtitle{max-width:318px;font-size:18px;line-height:22px;font-weight:400;color:#fff;margin:0;text-rendering:optimizeLegibility;grid-column:1/2}@media screen and (max-width:920px){.profile__subtitle{max-width:280px;font-size:14px;line-height:17px;text-align:center;grid-column:1/-1}}
 .profile__add-button{width:150px;height:50px;background:none;align-self:center;margin-left:auto;position:relative;transition:all 1s ease-in-out;border:2px solid #fff;box-sizing:border-box;border-radius:2px;background-image:url(./images/Vector.png);background-repeat:no-repeat;background-position:50%;cursor:pointer}.profile__add-button:hover{opacity:.6}.profile__add-button:focus{outline:none}@media screen and (max-width:920px){.profile__add-button{width:282px;margin-top:36px;margin-left:0}}
 .profile{max-width:882px;margin-top:40px;margin-left:auto;margin-right:auto;display:flex;flex-direction:row}@media screen and (max-width:920px){.profile{max-width:282px;flex-direction:column;align-items:center;margin-top:42px}}
-.element__delete{border:none;background:none;width:18px;height:19px;background-image:url(./images/like-delete.png);background-repeat:no-repeat;position:absolute;top:18px;right:15px;z-index:2;cursor:pointer}.element__delete:hover{opacity:.6}.element__delete:focus{outline:none}
-.element__image{width:282px;min-height:282px;z-index:1;position:relative;-o-object-fit:cover;object-fit:cover;cursor:pointer}.element__image:hover{opacity:.8}
+.element__delete{border:none;background:none;width:18px;height:19px;background-image:url(./images/like-delete.png);background-repeat:no-repeat;position:absolute;top:18px;right:15px;z-index:2;cursor:pointer;display:none}.element__delete:hover{opacity:.6}.element__delete:focus{outline:none}
+.element__image{width:282px;min-height:282px;max-height:282px;z-index:1;position:relative;-o-object-fit:cover;object-fit:cover;cursor:pointer}.element__image:hover{opacity:.8}
 .element__text{max-width:246px;margin-top:25px;margin-left:21px;display:flex;position:relative;flex-direction:row;justify-content:space-between;z-index:1}
 .element__title{max-width:230px;margin:0;font-weight:900;font-size:24px;line-height:29px;color:#000;text-rendering:optimizeLegibility;position:relative;z-index:1;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
-.element__like{width:21px;height:18px;background:none;border:none;margin-top:6px;margin-right:7px;background-image:url(./images/Group.png);background-repeat:no-repeat;cursor:pointer}.element__like:hover{opacity:.6}.element__like:focus{outline:none}
+.element__interactivity{width:20px;display:flex;flex-direction:column}
+.element__like{width:21px;height:18px;background:none;border:none;margin-right:7px;background-image:url(./images/Group.png);background-repeat:no-repeat;cursor:pointer}.element__like:hover{opacity:.6}.element__like:focus{outline:none}
 .element__like_active{background-image:url(./images/like-black.png);background-repeat:no-repeat}
+.element__like-counter{max-width:9px;font-weight:400;font-size:13px;line-height:16px;align-self:center;margin-top:3px;color:#000}
 .element{width:282px;height:361px;position:relative;background-color:#fff;border-radius:10px;overflow:hidden}
 .elements{max-width:882px;margin-top:51px;margin-left:auto;margin-right:auto;display:grid;grid-template-columns:repeat(auto-fit,282px);grid-gap:18px;justify-content:center}@media screen and (max-width:920px){.elements{max-width:650px}}@media screen and (max-width:660px){.elements{margin-top:36px;max-width:282px;grid-gap:20px}}
 .footer__copyright{max-width:318px;margin:0;color:#545454;font-weight:400;font-size:18px;line-height:22px;text-rendering:optimizeLegibility}@media screen and (max-width:660px){.footer__copyright{font-size:14px;line-height:17px}}
